Facebook opengraph image updated!

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta property="og:type"               content="article" />
 		<meta property="og:title"              content="Soumyo Chakma" />
 		<meta property="og:description"        content="Soumyo Chakma is student of Civil Engineering at Chittagong University of Engineering & Technology." />
-		<meta property="og:image"              content="pic/sc.jpg" />
+		<meta property="og:image"              content="https://raw.githubusercontent.com/schakma/schakma.github.io/main/assets/pic/sc.jpg" />
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
