--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<header id="header">
 						
 						<h1>Soumyo Chakma</h1>
-						<p>A  Pure Chirokumar &nbsp;&bull;&nbsp; A Future Civil Egineer</p>
+						<p>Ever high is my head &nbsp;&bull;&nbsp; চির উন্নত মম শির</p>
 						<nav>
 							<ul>
 								<li><a href="https://www.linkedin.com/in/soumyo-chakma-5964161ab/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
